# dat-mod-manager

./: Cargo.toml  README.md
src/: cli_application.rs  constants.rs  download_manager.rs  errors.rs  gui_application.rs  ipc.rs  launch_file.rs  lib.rs  main.rs  manager_config.rs  mod_info.rs  plugin.rs  util.rs
src/gui_application/: integer_object.rs
src/gui_application/integer_object/: imp.rs
src/mod_info/: game.rs  game_mod.rs  instance.rs  mod_list.rs
src/plugin/: downloader.rs  installer.rs  plugin_errors.rs  plugin_manager.rs  plugin_util.rs
src/plugin/plugin_manager/: built_in_plugins.rs  plugin_register.rs
src/plugin/plugin_manager/built_in_plugins/: http_downloader.rs
