[package]
name = "dat-mod-manager"
description = "A native mod manager for bethesda titles."
authors = ["jtljac"]
version = "0.1.0"
edition = "2021"

[dependencies]
atty = "0.2.14"
clap = { version = "4.1.8", features = ["cargo"] }
directories = "4.0.1"
error-chain = "0.12.4"
gtk = { version = "0.6.2", package = "gtk4", features = ["v4_10"] }
indicatif = "0.17.3"
lazy_static = "1.4.0"
nix = "0.26.2"
notify-rust = "4.8.0"
once_cell = "1.17.1"
regex = "1.7.1"
serde = { version = "1.0.156", features = ["derive"] }
toml = "0.7.3"
